Fix photo positioning: Audrey (revert zoom, shift down), Patricio (shift down more), Allen (zoom in more on right)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1619,8 +1619,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .member-photo img.audrey-photo {
-    transform: scale(1.2);
-    object-position: center 60%;
+    transform: scale(1.3);
+    object-position: center 70%;
 }
 
 /* Executive Board photos */
@@ -1630,8 +1630,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .member-photo img.allen-photo {
-    transform: scale(1.5);
-    object-position: 70% 30%;
+    transform: scale(1.7);
+    object-position: 80% 30%;
 }
 
 .member-photo img.haile-photo {
@@ -1691,8 +1691,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .member-photo img.patricio-photo {
-    transform: scale(1.1);
-    object-position: center 60%;
+    transform: scale(1.0);
+    object-position: center 75%;
 }
 
 .member-photo img.sabrina-photo {
